--- a/zft-adapter/src/main/resources/templates/inventory/inventory.html
+++ b/zft-adapter/src/main/resources/templates/inventory/inventory.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <div th:replace="~{common/common::cjbar}"/>
-    <title>库存</title>
+    <title>库存-药品/物资</title>
 </head>
 <body style="background-color: rgb(225,228,232);">
 <div th:replace="~{common/common::headbar}"/>
