--- a/zft-adapter/src/main/resources/templates/inventory/inventoryOut.html
+++ b/zft-adapter/src/main/resources/templates/inventory/inventoryOut.html
@@ -320,12 +320,6 @@
         add.style.display = "none";
     };
 
-    // 打开详情弹窗
-    select.onclick = function () {
-        shadow.style.display = "block";
-        detailed.style.display = "block";
-    };
-
     // 关闭详情弹窗
     function close3() {
         shadow.style.display = "none";
@@ -386,7 +380,7 @@
     });
 
     /**
-     * 查看入库单
+     * 查看出库单
      * @param id
      */
     function detail(id) {
