改造thymeleaf为使用vue2的html（1）(因为在新增入库时，动态选择输入框查询的数据进行渲染到列表上时，thymeleaf显得太笨重了，果断选择全面更换前端页面为vue2)

--- a/zft-adapter/src/main/resources/templates/common/common.html
+++ b/zft-adapter/src/main/resources/templates/common/common.html
@@ -19,6 +19,8 @@
     <script type="text/javascript" th:src="@{/bootstrap/js/feather.min.js}"></script>
     <script type="text/javascript" th:src="@{/js/axios.js}"></script>
     <script type="text/javascript" th:src="@{/js/jquery.js}"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vue@2.7.14/dist/vue.js"></script>
+    <script>Vue.config.productionTip= false </script>
     <script>
         feather.replace()
     </script>
