--- a/zft-adapter/src/main/resources/templates/login.html
+++ b/zft-adapter/src/main/resources/templates/login.html
@@ -7,43 +7,75 @@
     <title>登录</title>
 </head>
 <body>
-    <form th:action="@{/account/login}" method="post">
+    <form ref="form" @submit.prevent="login" id="login">
         <h1 class="h3 mb-3 font-weight-normal">用户登录</h1>
         <label for="inputAccount" class="sr-only">账号</label>
-        <input type="text" id="inputAccount" name="account_name" class="form-control" style="background-color: rgba(255,255,255,0.2)" placeholder="账号" required autofocus>
+        <input type="text" id="inputAccount" name="account_name" v-model="loginData.account_name" class="form-control" style="background-color: rgba(255,255,255,0.2)" placeholder="账号" required autofocus>
         <label for="inputPassword" class="sr-only">密码</label>
-        <input type="password" id="inputPassword" name="account_password" class="form-control" style="background-color: rgba(255,255,255,0.2)" placeholder="密码" required>
+        <input type="password" id="inputPassword" name="account_password" v-model="loginData.account_password" class="form-control" style="background-color: rgba(255,255,255,0.2)" placeholder="密码" required>
         <label for="inputCountryCode" class="sr-only">国家码</label>
-        <input type="text" id="inputCountryCode" name="country_code" class="form-control" style="background-color: rgba(255,255,255,0.2)" placeholder="国家码" required><br>
+        <input type="text" id="inputCountryCode" name="country_code" v-model="loginData.country_code" class="form-control" style="background-color: rgba(255,255,255,0.2)" placeholder="国家码" required><br>
         <label for="inputVerificationCode" class="sr-only">验证码</label>
-        <input type="text" id="inputVerificationCode" name="code" class="form-control" style="background-color: rgba(255,255,255,0.2)" placeholder="验证码" required><br>
-        <div th:faragment="yanzhengma" th:onclick="getImg()"><img style="width: 300px;height: 100px;" id="img"></div>
+        <input type="text" id="inputVerificationCode" name="code" v-model="loginData.code" class="form-control" style="background-color: rgba(255,255,255,0.2)" placeholder="验证码" required><br>
+        <div v-on:click="getImg"><img style="width: 300px;height: 100px;" ref="img"></div>
         <button class="btn btn-lg btn-primary btn-block" type="submit">登录</button>
     </form>
     <script>
-        const img = document.getElementById("img");
-
-        // 页面刷新时调用请求验证码图片
-        window.onload = function(){
-            getImg();
-        };
-
-        // 请求验证码图片方法
-        function getImg(){
-            axios({
-                method: 'GET',
-                url: 'http://localhost:8080/account/getImg',
-                responseType: 'blob',
-            }).then(response => {
-                const reader = new FileReader();
-                reader.onload = (e) => {
-                    if (img) {
-                        img.src = e.target.result;
-                    }
-                };
-                reader.readAsDataURL(response.data)
-            })
-        }
+        let vm = new Vue({
+            el: "#login",
+            data: {
+                loginData:{
+                    account_name: '',
+                    account_password: '',
+                    country_code: '',
+                    code: '',
+                }
+            },
+            methods: {
+                getImg(){
+                    console.log("555");
+                    axios({
+                        method: 'GET',
+                        url: 'http://localhost:8080/account/getImg',
+                        responseType: 'blob',
+                    }).then(response => {
+                        const reader = new FileReader();
+                        reader.onload = (e) => {
+                            if (this.$refs.img) {
+                                this.$refs.img.src = e.target.result;
+                            }
+                        };
+                        reader.readAsDataURL(response.data)
+                    })
+                },
+                login(event){
+                    // 阻止表单默认提交行为
+                    event.preventDefault();
+                    $.ajax({
+                        url: '/account/login',
+                        type: 'POST',
+                        data: this.loginData,
+                        contentType: false,
+                        processData: false,
+                        success: function (response) {
+                            if(response.status === 200){
+                                window.location.href = "localhost:8080/clinic/clinic.html";
+                            }
+                            if(response.status === 401){
+                                layer.msg('账号密码错误，请刷新重试');
+                            }
+                        },
+                        error:function () {
+                            layer.msg('请求入库单一览查询失败，请刷新重试');
+                        }
+                    })
+                }
+            },
+            computed: {},
+            mounted() {
+                this.getImg();
+            },
+        });
     </script>
 </body>
 </html>
