改造thymeleaf为使用vue2的html（2） 改造实体为驼峰命名

--- a/zft-adapter/src/main/resources/templates/inventory/inventory.html
+++ b/zft-adapter/src/main/resources/templates/inventory/inventory.html
@@ -41,7 +41,7 @@
             </div>
         </div>
         <div class="info" id="infoList" th:fragment="infoList">
-            <table class="table table-striped" style="font-size: 15px;">
+            <table class="table table-striped" style="font-size: 15px;text-align: center;">
                 <thead>
                 <tr>
                     <td scope="col" width="10%">品项名称</td>
