--- a/zft-adapter/src/main/resources/templates/inventory/inventoryCheck.html
+++ b/zft-adapter/src/main/resources/templates/inventory/inventoryCheck.html
@@ -57,7 +57,7 @@
             </div>
         </div>
         <div class="info" th:fragment="checkInfoList" id="checkInfoList">
-            <table class="table table-striped" style="font-size: 15px;">
+            <table class="table table-striped" style="font-size: 15px;text-align: center;">
                 <thead>
                 <tr>
                     <td scope="col" width="12%">盘点单号</td>
@@ -153,7 +153,7 @@
                     </div>
                 </div>
                 <div class="table1">
-                    <table class="table table-striped" style="font-size: 16px;">
+                    <table class="table table-striped" style="font-size: 16px;text-align: center;">
                         <thead>
                         <tr>
                             <td scope="col" width="15%">药品名</td>
@@ -241,7 +241,7 @@
             </div>
             <div class="info2">
                 <div class="table2">
-                    <table class="table table-striped" style="font-size: 16px;">
+                    <table class="table table-striped" style="font-size: 16px;text-align: center;">
                         <thead>
                         <tr>
                             <td scope="col" width="10%">商品ID</td>
