--- a/zft-adapter/src/main/resources/templates/inventory/inventoryOut.html
+++ b/zft-adapter/src/main/resources/templates/inventory/inventoryOut.html
@@ -64,7 +64,7 @@
             </div>
         </div>
         <div class="info" id="outInfoList" th:fragment="outInfoList">
-            <table class="table table-striped" style="font-size: 15px;">
+            <table class="table table-striped" style="font-size: 15px;text-align: center;">
                 <thead>
                 <tr>
                     <td scope="col" width="15%">出库单号</td>
@@ -158,7 +158,7 @@
                     </div>
                 </div>
                 <div class="table1">
-                    <table class="table table-striped" style="font-size: 16px;">
+                    <table class="table table-striped" style="font-size: 16px;text-align: center;">
                         <thead>
                         <tr>
                             <td scope="col" width="16%">药品名</td>
@@ -247,7 +247,7 @@
             </div>
             <div class="info2">
                 <div class="table2">
-                    <table class="table table-striped" style="font-size: 16px;">
+                    <table class="table table-striped" style="font-size: 16px;text-align: center;">
                         <thead>
                         <tr>
                             <td scope="col" width="10%">商品ID</td>
